# cs16-client

./: .gitmodules  CMakeLists.txt  README.md
android/app/src/main/java/su/xash/cs16client/: MainActivity.java
